<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_website"
        android:importantForAutofill="no"
        android:inputType="textWebEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpenWebsite"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpenLocation"
        android:text="@string/open_location" />

    <EditText
        android:id="@+id/etShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_share_text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onShareText"
        android:text="@string/share_text" />

    <EditText
        android:id="@+id/etCallPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCallPhone"
        android:text="@string/call" />
</LinearLayout>