<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/orange_text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:background="@color/orange"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_weight="1"
            android:text="@string/green_text"
            android:gravity="center"
            android:background="@color/green"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blue_text"
            android:background="@color/blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/btn_blue_text"
            android:background="@color/blue"/>
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/test"
            tools:ignore="ContentDescription" />
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_weight="1"
            android:text="@string/btn_green_text"
            android:background="@color/green"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="This is an EditText"
            android:inputType="text"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="This is a new EditText"
            android:inputType="text"
            tools:ignore="Autofill,HardcodedText"/>

    </LinearLayout>


</LinearLayout>